--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/**",
+    "pretest": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate",
+    "test": "jest --forceExit --detectOpenHandles app"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +16,13 @@
     "body-parser": "^1.18.3",
     "cuid": "^2.1.6",
     "express": "^4.16.4",
+    "jest": "^24.5.0",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
     "sequelize": "^5.2.0",
     "sqlite": "^3.0.3",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
